other-cel/restrict-node-affinity/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  affinity:
    podAffinity:
      prefferedDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: bar
            operator: In
            values:
            - bar
        topologyKey: topology.kubernetes.io/zone
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: security
              operator: In
              values:
              - S2
          topologyKey: topology.kubernetes.io/zone
  containers:
    - name: busybox
      image: busybox:1.35
