other-cel/restrict-node-affinity/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: foo
                operator: In
                values:
                - bar
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          affinity:
            nodeAffinity:
              preferredDuringSchedulingIgnoredDuringExecution:
              - weight: 1
                preference:
                  matchExpressions:
                  - key: foo
                    operator: In
                    values:
                    - bar
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
          restartPolicy: OnFailure
