other-cel/restrict-node-affinity/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      affinity:
        podAffinity:
          prefferedDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: bar
                operator: In
                values:
                - bar
            topologyKey: topology.kubernetes.io/zone
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: busybox:1.35
          restartPolicy: OnFailure
