other-cel/restrict-node-affinity/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-node-affinity
status:
  ready: true
